--- a/account/dashboard.html
+++ b/account/dashboard.html
@@ -249,7 +249,7 @@
                     </a>
                 </div>
                 <div class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#" class="nav-link" onclick="window.location.href='./profile.html'">
                         <i class="fas fa-user"></i>
                         <span>Settings</span>
                     </a>
