--- a/account/dashboard.html
+++ b/account/dashboard.html
@@ -19,8 +19,8 @@
         <div class="wallet-header">
             <div class="wallet-title">BukaWallet</div>
             <div class="wallet-actions">
-                <button class="btn"><i class="fas fa-qrcode"></i></button>
-                <button class="btn"><i class="fas fa-cog"></i></button>
+                <button class="btn" onclick="window.location.href='./scan.html'"><i class="fas fa-qrcode"></i></button>
+                <button class="btn" onclick="window.location.href='./pages.html'"><i class="fas fa-cog"></i></button>
             </div>
         </div>
         
