--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 
     <!-- Buttons Container -->
     <div class="button-container">
-      <button class="btn btn-wallet btn-primary-custom" onclick="window.location.href='./account/dashboard.html'">Create new wallet</button>
-      <button class="btn btn-wallet btn-secondary-custom" onclick="window.location.href='./account/dashboard.html'">I already have a wallet</button>
+      <button class="btn btn-wallet btn-primary-custom" onclick="window.location.href='./account/signup.html'">Create new wallet</button>
+      <button class="btn btn-wallet btn-secondary-custom" onclick="window.location.href='./account/signin.html'">I already have a wallet</button>
     </div>
 
     <!-- Terms Text -->
