--- a/account/pages.html
+++ b/account/pages.html
@@ -121,10 +121,10 @@
         </div>
       </div>
 
-      <div class="settings-item">
+      <div class="settings-item" onclick="window.location.href='./manage-crypto.html'">
         <div class="icon-label">
           <i class="bi bi-person-lines-fill"></i>
-          <span>Address Book</span>
+          <span>Manage Crypto</span>
         </div>
       </div>
 
@@ -135,7 +135,7 @@
         </div>
       </div>
 
-      <div class="settings-item">
+      <div class="settings-item" onclick="window.location.href='./scan.html'">
         <div class="icon-label">
           <i class="bi bi-qr-code-scan"></i>
           <span>Scan QR Code</span>
@@ -151,18 +151,18 @@
     </div>
 
     <!-- Settings Group 2 -->
-    <div class="settings-group">
+    <div class="settings-group" onclick="window.location.href='./kyc.html'">
       <div class="settings-item">
         <div class="icon-label">
           <i class="bi bi-gear"></i>
-          <span>Preferences</span>
+          <span>Upload Kyc</span>
         </div>
       </div>
 
       <div class="settings-item">
         <div class="icon-label">
           <i class="bi bi-shield-lock-fill"></i>
-          <span>Security</span>
+          <span>Security / Pin</span>
         </div>
       </div>
 
