--- a/account/scan.html
+++ b/account/scan.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scan QR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>QR Scanner</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     :root {
@@ -14,26 +14,25 @@
     }
 
     body, html {
+      background-color: var(--dark);
       margin: 0;
       padding: 0;
-      background-color: var(--dark);
-      color: var(--text-light);
-      font-family: 'Segoe UI', sans-serif;
       height: 100vh;
+      font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
+      color: var(--text-light);
     }
 
     .header {
       position: absolute;
       top: 0;
-      left: 0;
       width: 100%;
-      background-color: var(--dark);
+      z-index: 10;
       padding: 14px 16px;
+      background-color: var(--dark);
       display: flex;
       align-items: center;
-      gap: 12px;
-      z-index: 10;
+      gap: 10px;
     }
 
     .header h6 {
@@ -43,12 +42,13 @@
     }
 
     video {
-      object-fit: cover;
-      width: 100vw;
-      height: 100vh;
       position: absolute;
       top: 0;
       left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+      z-index: 1;
     }
 
     .scan-box {
@@ -87,19 +87,23 @@
       mix-blend-mode: destination-out;
     }
 
-    canvas {
-      display: none;
+    #output {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      z-index: 10;
+      padding: 16px;
+      background-color: #000000d0;
+      font-size: 14px;
+      text-align: center;
     }
 
-    .fallback-text {
-      position: absolute;
-      bottom: 20px;
-      left: 0;
-      width: 100%;
-      text-align: center;
-      color: var(--text-light);
-      font-size: 14px;
-      z-index: 10;
+    #copyBtn {
+      margin-top: 8px;
+    }
+
+    canvas {
+      display: none;
     }
   </style>
 </head>
@@ -107,35 +111,67 @@
 
   <!-- Header -->
   <div class="header">
-    <button class="btn p-0 text-light" onclick="history.back()">
-      ←
-    </button>
+    <button class="btn btn-sm btn-link text-light p-0" onclick="history.back()">←</button>
     <h6>Scan QR Code</h6>
   </div>
 
-  <!-- Camera Feed -->
-  <video id="camera" autoplay playsinline></video>
+  <!-- Video Stream -->
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas" hidden></canvas>
 
-  <!-- Scan Box -->
+  <!-- UI Overlay -->
   <div class="scan-box"></div>
   <div class="overlay"></div>
 
-  <!-- Fallback Text -->
-  <div class="fallback-text">Align the QR code within the box to scan</div>
+  <!-- Output -->
+  <div id="output" class="text-light d-none">
+    <div id="scannedData"></div>
+    <button id="copyBtn" class="btn btn-success btn-sm">Copy</button>
+  </div>
 
-  <!-- JS to Start Camera -->
+  <!-- jsQR Library -->
+  <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
   <script>
-    const video = document.getElementById('camera');
+    const video = document.getElementById("video");
+    const canvas = document.getElementById("canvas");
+    const output = document.getElementById("output");
+    const scannedData = document.getElementById("scannedData");
+    const copyBtn = document.getElementById("copyBtn");
+    const ctx = canvas.getContext("2d");
 
     async function startCamera() {
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+        const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
         video.srcObject = stream;
+        requestAnimationFrame(scanFrame);
       } catch (err) {
         alert("Camera access denied or not supported.");
-        console.error(err);
       }
     }
+
+    function scanFrame() {
+      if (video.readyState === video.HAVE_ENOUGH_DATA) {
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+        const code = jsQR(imageData.data, imageData.width, imageData.height, { inversionAttempts: "dontInvert" });
+
+        if (code) {
+          scannedData.textContent = code.data;
+          output.classList.remove("d-none");
+          return; // Stop scanning once found
+        }
+      }
+      requestAnimationFrame(scanFrame);
+    }
+
+    copyBtn.addEventListener("click", () => {
+      navigator.clipboard.writeText(scannedData.textContent).then(() => {
+        copyBtn.textContent = "Copied!";
+        setTimeout(() => (copyBtn.textContent = "Copy"), 2000);
+      });
+    });
 
     startCamera();
   </script>
