--- a/account/send.html
+++ b/account/send.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Receive Assets</title>
+  <title>Sell Assets</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
@@ -124,7 +124,7 @@
     <button class="btn text-light p-0" onclick="history.back()">
       <i class="bi bi-x-lg"></i>
     </button>
-    <h6>Receive</h6>
+    <h6>Send</h6>
   </div>
 
   <!-- Search -->
