--- a/account/dashboard.html
+++ b/account/dashboard.html
@@ -218,7 +218,7 @@
                         <span>Wallet</span>
                     </a>
                 </div>
-                <div class="nav-item">
+                <div class="nav-item" onclick="window.location.href='./chart.html'">
                     <a href="#" class="nav-link">
                         <i class="fas fa-chart-line"></i>
                         <span>Markets</span>
