--- a/account/pages.html
+++ b/account/pages.html
@@ -159,14 +159,14 @@
         </div>
       </div>
 
-      <div class="settings-item">
+      <div class="settings-item" onclick="window.location.href='./'">
         <div class="icon-label">
           <i class="bi bi-shield-lock-fill"></i>
           <span>Security / Pin</span>
         </div>
       </div>
 
-      <div class="settings-item">
+      <div class="settings-item" onclick="window.location.href='./notification.html'">
         <div class="icon-label">
           <i class="bi bi-bell-fill"></i>
           <span>Notifications</span>
@@ -175,7 +175,7 @@
     </div>
 
     <!-- Settings Group 3 -->
-    <div class="settings-group">
+    <div class="settings-group" onclick="window.location.href='./support.html'">
       <div class="settings-item">
         <div class="icon-label">
           <i class="bi bi-question-circle-fill"></i>
