--- a/account/about-coin.html
+++ b/account/about-coin.html
@@ -6,33 +6,33 @@
   <title>ETH Asset Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+
   <style>
     :root {
-      --dark: #0B0E11;
-      --gray-dark: #151A21;
-      --gray: #2A3139;
-      --green: #05C0A5;
+      --dark: #0b0e11;
+      --gray-dark: #151a21;
+      --gray: #2a3139;
+      --green: #05c0a5;
       --text-light: #ffffff;
-      --text-muted: #8B939F;
+      --text-muted: #8b939f;
     }
 
     body {
+      margin: 0;
+      padding: 0;
       background-color: var(--dark);
       color: var(--text-light);
       font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
     }
 
     .header {
-      position: sticky;
-      top: 0;
       background-color: var(--dark);
       padding: 14px 16px;
       display: flex;
       align-items: center;
       gap: 12px;
-      border-bottom: 1px solid #1e1e1e;
+      position: sticky;
+      top: 0;
       z-index: 1000;
     }
 
@@ -48,40 +48,42 @@
       margin-top: -4px;
     }
 
-    .nav-tabs {
-      border: none;
-      background-color: var(--dark);
-      justify-content: space-around;
-    }
 
     .nav-tabs .nav-link {
-      color: var(--text-muted);
-      border: none;
-      font-weight: 500;
-    }
+    color: var(--light);
+    border: none;
+  }
 
-    .nav-tabs .nav-link.active {
-      color: var(--green);
-      border-bottom: 2px solid var(--green);
+  .nav-tabs .nav-link.active {
+    border-bottom: 3px solid var(--secondary);
+    color: var(--light);
+    background: transparent;
+  }
+
+
+    .content {
+      padding: 16px;
+      padding-bottom: 100px;
     }
 
     .section-title {
-      font-size: 15px;
+      font-size: 16px;
       font-weight: 600;
       margin-top: 25px;
+      margin-bottom: 10px;
     }
 
     .read-more {
       color: var(--green);
       font-size: 14px;
       font-weight: 500;
+      cursor: pointer;
     }
 
     .stats-card {
       background-color: var(--gray-dark);
       border-radius: 10px;
       padding: 15px;
-      margin-top: 10px;
     }
 
     .stat-item {
@@ -104,7 +106,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 8px;
-      margin-top: 15px;
+      margin-top: 10px;
     }
 
     .link-tags span {
@@ -114,6 +116,11 @@
       border-radius: 15px;
       font-size: 13px;
       cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    .link-tags span:hover {
+      background-color: var(--gray-dark);
     }
 
     .bottom-nav {
@@ -125,13 +132,18 @@
       border-top: 1px solid #222;
       display: flex;
       justify-content: space-around;
+      align-items: center;
       padding: 6px 0;
+      z-index: 999;
     }
 
     .bottom-nav .nav-item {
       text-align: center;
       font-size: 12px;
       color: var(--text-light);
+      flex: 1;
+      padding: 8px 0;
+      transition: background-color 0.3s, color 0.3s;
     }
 
     .bottom-nav .nav-item i {
@@ -140,16 +152,29 @@
       margin-bottom: 4px;
     }
 
-    .bottom-nav .active {
+    .bottom-nav .nav-item.active {
       color: var(--dark);
       background-color: var(--green);
-      padding: 8px 16px;
       border-radius: 15px;
+      font-weight: 600;
     }
 
-    .content {
-      padding: 16px;
-      padding-bottom: 80px;
+    @media (max-width: 576px) {
+      .nav-tabs .nav-link {
+        font-size: 13px;
+      }
+
+      .section-title {
+        font-size: 14px;
+      }
+
+      .bottom-nav .nav-item i {
+        font-size: 18px;
+      }
+
+      .bottom-nav .nav-item span {
+        font-size: 11px;
+      }
     }
   </style>
 </head>
@@ -181,7 +206,7 @@
   <div class="content">
     <div class="section-title">About ETH</div>
     <p class="text-muted" style="font-size: 14px;">
-      Open source platform to write and distribute decentral...
+      Ethereum is a decentralized open-source blockchain system that features smart contract functionality...
     </p>
     <div class="read-more">Read more</div>
 
@@ -189,26 +214,26 @@
     <div class="stats-card">
       <div class="stat-item">
         <div class="stat-label">Market Cap</div>
-        <div>$2.93873737E11</div>
+        <div>$293B</div>
       </div>
       <div class="stat-item">
         <div class="stat-label">Circulating Supply</div>
-        <div>120.717.850 ETH</div>
+        <div>120.7M ETH</div>
       </div>
       <div class="stat-item">
         <div class="stat-label">Total Supply</div>
-        <div>120.717.850 ETH</div>
+        <div>∞</div>
       </div>
     </div>
 
     <div class="section-title">Links</div>
     <div class="link-tags">
-      <span>Official website</span>
+      <span>Website</span>
       <span>Explorer</span>
-      <span>github</span>
-      <span>x</span>
-      <span>reddit</span>
-      <span>whitepaper</span>
+      <span>GitHub</span>
+      <span>Twitter</span>
+      <span>Reddit</span>
+      <span>Whitepaper</span>
     </div>
   </div>
 
