--- a/account/send-assets.html
+++ b/account/send-assets.html
@@ -107,7 +107,7 @@
    <div>
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h5 class="fw-bold">Send TRX</h5>
-        <i class="fas fa-times text-white"></i>
+        <i class="fas fa-times text-white" onclick="window.location.href='./coin-page.html'"></i>
       </div>
   
       <div class="mb-4">
@@ -133,10 +133,10 @@
       <div class="mb-4 memo-row">
         <label class="form-label">Memo (optional)</label>
         <input type="text" class="form-control">
-        <div class="memo-icons">
+        <!-- <div class="memo-icons">
           <i class="fas fa-expand input-group-icon"></i>
           <i class="fas fa-info-circle input-group-icon"></i>
-        </div>
+        </div> -->
       </div>
    </div>
 
